Updated dashboard components, services, and data files
- Modified multiple dashboard components (Admin, ChartCard, Dashboard, etc.)
- Updated MCP services and dashboard data handlers
- Added debug_worker.js and update_customer_metrics.py
- Refined package.json and startup configurations

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node startup.js",
-    "dev": "vite",
+    "dev": "npm run build && node startup.js",
     "build": "vite build",
     "preview": "vite preview"
   },
