Fix P21 MCP server integration and resolve critical React issues
- Fix React Hook call errors by moving useRef to proper hook level
- Resolve duplicate key warnings by implementing unique identifier keys
- Change error values from 99999 to 0 for better error handling
- Fix Site Distribution chart filtering (was discarding legitimate 0 values)
- Add enhanced MCP query debugging and logging
- Implement proper SQL query result processing
- Add comprehensive error handling for MCP service calls
- Update timeout configurations for better MCP server response handling
- Fix chart data transformations and value extraction
- Improve dashboard stability and performance

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 OLLAMA_URL=http://localhost:11434
 
 # P21 SQL Server Configuration
-P21_DSN=P21Live
+P21_DSN=P21live
 
 # POR MS Access Configuration  
 POR_FILE_PATH=\\ts03\POR\POR.MDB
